--- a/src/app/componenets/wood/wood.component.scss
+++ b/src/app/componenets/wood/wood.component.scss
@@ -4,4 +4,12 @@
     height: 55px;
     border-radius: 27px;
     color: rgb(231, 231, 231);
+    color: #c2bebe;
+}
+
+.selected {
+    width: 55px;
+    height: 55px;
+    background-color: #1b048689;
+    border-radius: 27px;
 }
